--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,8 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Blog Posts"
+  - title: "独り言・メモ"
     url: /year-archive/
 
-  - title: "Guide"
-    url: /markdown/
+  - title: "ポートフォリオ"
+    url: /portfolio/
